# pywinapi

./: README.md  meson.build  meson_options.txt  pyproject.toml
src/pywinapi/processes/: __init__.py  meson.build  run_as_admin.pyx  runas_wrap.c  runas_wrap.h  runas_wrap.pxd  set_priority.pyx  set_priority_wrap.c  set_priority_wrap.h  set_priority_wrap.pxd  winapi_defs.pxd  winapi_defs.pyx
