[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    'meson>=1.3.0rc1',
    'setuptools-git-versioning<2',
    'cython>=3.0.0b1',
]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true

[tool.meson-python]
limited-api = false # doesn't work, for some reason?

[tool.meson-python.args]
setup = [
    '-Ddefault_library=static', # do not change this unless you know what you're doing
]

[project]
name = 'pywinapi'
dynamic = ['version']
description = 'Python bindings and helper methods for WinAPI functions'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
    {name = 'Andrew Meyer', email = 'andmeyer@tesla.com'},
]
